# YASMP

./: .gitignore  README.md  __init__.py  auth.py  blog.py  config.py  default.nix  package-lock.json  pyproject.toml  result  shell.nix  tailwind.config.js  todo.org  wsgi.py  yasmp.sqlite
app/: __init__.py  auth.py  blog.py  events.py  routes.py  schema.sql
app/static/: main.css  tailwind.css
app/templates/: base.html  index.html  user-homepage.html
app/templates/auth/: login.html  register.html
app/templates/blog/: index.html
app/templates/events/: create.html  event.html  index.html  update.html
src/: app.py  setup.py
templates/: base.html
templates/blog/: create.html  update.html
