[tool.poetry]
name = "yasmp"
version = "0.1.0"
description = ""
authors = ["Thanawat Techaumnuaiwit <thanawat@ucsb.edu>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
SQLAlchemy = "^1.3.22"
Flask-SQLAlchemy-Helpers = "^1.9.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
